--- a/src/my-app.html
+++ b/src/my-app.html
@@ -79,9 +79,10 @@
         <app-header slot="header" condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-            <!--<div main-title>-->
-            <paper-button on-tap="pick">
-              {{book}} {{chapter}} ({{version}})
+            <div main-title>{{book.LongName}} {{chapter}}</div>
+            <paper-icon-button on-tap="pick" icon="my-icons:book" style="color: white;"></paper-icon-button>
+            <paper-button on-tap="vpick">
+              {{version}}
             </paper-button>
             <!--</div>-->
           </app-toolbar>
@@ -99,7 +100,7 @@
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
-    <book-picker id="picker" book="{{book}}" chapter="{{chapter}}"></book-picker>
+    <book-picker id="picker" book="{{book}}" chapter="{{chapter}}" version="{{version}}"></book-picker>
   </template>
 
   <script>
@@ -122,8 +123,12 @@
             observer: '_pageChanged',
           },
           book: {
-            type: String,
-            value: "Genesis"
+            type: Object,
+            value: {
+              BookNumber: 10,
+              LongName: "Genesis",
+              ShortName: "Gn"
+            }
           },
           chapter: {
             type: Number,
@@ -131,7 +136,7 @@
           },
           version: {
             type: String,
-            value: "MSG"
+            value: "msg"
           }
         };
       }
