gross dark theme

--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -10,7 +10,7 @@
         padding: 5px;
       }
       h3 {
-        color: black;
+        color: var(--primary-text-color);
         text-align: center;
       }
       .q1 {
@@ -22,7 +22,7 @@
       p {
         margin: 0;
         padding: 0;
-        color: black;
+        color: var(--primary-text-color);
       }
       .b {
         padding-bottom: 20px;
