--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -14,11 +14,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="shared-styles">
   <template>
     <style>
+      :host {
+        --primary-text-color: var(--dark-theme-text-color);
+        --primary-background-color: var(--dark-theme-background-color);
+        --secondary-text-color: var(--dark-theme-secondary-color);
+        --disabled-text-color: var(--dark-theme-disabled-color);
+        --divider-color: var(--dark-theme-divider-color);
+        --error-color: var(--paper-deep-orange-a700);
+      }
+
       .card {
         padding: 16px;
-        color: #757575;
+        color: var(--primary-text-color);
         border-radius: 5px;
-        background-color: #fff;
+        background-color: var(--primary-background-color);
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
 
@@ -36,7 +45,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       h1 {
         margin: 16px 0;
-        color: #212121;
+        color: var(--primary-text-color);
         font-size: 22px;
       }
     </style>
